<resources>
    <string name="app_name">ЖКХ</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="btn_login">Войти</string>
    <string name="btn_go_register">Не зарегистрированы?</string>
    <string name="btn_go_login">Уже зарегистрированы?</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="send">Отправить</string>
    <string name="hint_name">Имя</string>
    <string name="hint_email">Email</string>
    <string name="error_name">Минимальная длина имени 3 символа</string>
    <string name="error_login">Не верный Email</string>
    <string name="error_password">Минимальная длина пароля 6 символов</string>
    <string name="error_fill">Заполните это поле</string>
    <string name="text_auth">Авторизация…</string>
    <string name="text_wait">Подождите…</string>
    <string name="send_email">На вашу почту было отправлено письмо с подтверждением аккаунта</string>
    <string name="send_news">Ваша публикация будет рассмотрена администратором</string>
    <string name="log_out">Выход</string>
    <string name="empty_tickets">У вас пока нет заявок</string>
    <string name="empty_news">Новостей пока нет</string>
    <string name="empty_tickets_all">Заявки отсутствуют</string>
    <string name="empty_users">Пользователи отсутствуют</string>
    <string name="create_ticket_send">Отправить</string>
    <string name="cancel">Отмена</string>
    <string name="feedback_title">Оставьте отзыв</string>
    <string name="feedback_name">Отзыв:\n%1$s</string>
    <string name="create_name">Название</string>
    <string name="create_description">Описание</string>
    <string name="create_button">Создать</string>
    <string name="add_photo">Добавить фото</string>
    <string name="set_photo">Изменить фото</string>
    <string name="check_your_internet_connection">Проверьте ваше подключение к интернету</string>
    <string name="status_1">На рассмотрении</string>
    <string name="status_2">Принято</string>
    <string name="status_3">Выполняется</string>
    <string name="status_4">Выполнено</string>
    <string name="access_level_1">Пользователь</string>
    <string name="access_level_2">Исполнитель</string>
    <string name="access_level_3">Управляющая компания</string>
    <string name="set_user">Назначить %1$s:</string>
    <string name="status_error">Ошибка</string>
    <string name="builder_none">Исполнитель не назначен</string>
    <string name="set_builder">Назначить исполнителя</string>
    <string name="builders_not_found">Исполнители не найдены</string>
    <string name="set_status">Изменить статус</string>
    <string name="news">Новости</string>
    <string name="tickets">Заявки</string>
    <string name="publish">Опубликовать</string>
    <string name="admin_menu">Управление</string>
</resources>
