<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.fixee.myapplication.add.AddActivity">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:fitsSystemWindows="true"
        app:layout_constraintHeight_percent="0.87">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textInputLayout"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_description"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:adjustViewBounds="true"
                android:layout_below="@id/textInputLayout2" />

            <Button
                android:id="@+id/btn_add_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/ripple_red"
                android:text="@string/add_photo"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.13"
        android:background="@color/colorRedButton"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_red"
        android:text="@string/create_button"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
