<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_login"
                android:inputType="textEmailAddress"
                android:nextFocusLeft="@id/input_login_email"
                android:nextFocusUp="@id/input_login_email"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:nextFocusLeft="@id/input_login_password"
                android:nextFocusUp="@id/input_login_password"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Sign in Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorRedButton"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_red"
            android:text="@string/btn_login"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_go_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_red"
            android:text="@string/btn_go_register"
            android:textColor="#f6c0c0" />

    </LinearLayout>
</ScrollView>